# LargeImageSynth

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
docs/: README.md  api-reference.md  cli-reference.md  hdf5.md  quickstart.md  webdataset.md
examples/: example_usage.py  spatial_learning_example.py
examples/experiments/: binary.json  multiclass_v2.json  multiclass_v3.json  multiclass_webdataset.json  spatial_stars_example.json
src/tiled_dummy_gen/: __init__.py  cli.py
src/tiled_dummy_gen/compat/: __init__.py  adapters.py  converters.py
src/tiled_dummy_gen/config/: __init__.py  parser.py  scene_config.py
src/tiled_dummy_gen/core/: __init__.py  embedder.py  generator.py  pipeline.py  scene_generator.py
src/tiled_dummy_gen/export/: __init__.py  base_exporter.py  file_structure_exporter.py  hdf5_exporter.py  webdataset_exporter.py
src/tiled_dummy_gen/scene/: __init__.py  layout.py  objects.py  relationships.py
src/tiled_dummy_gen/shapes/: __init__.py  bar.py  base.py  circle.py  factory.py  star.py
src/tiled_dummy_gen/tasks/: __init__.py  generators.py  presets.py
src/tiled_dummy_gen/utils/: __init__.py
tests/: __init__.py  test_basic.py
